# Design-Patterns

./: README.md
Creational Patterns/: CMakeLists.txt  README.md  aeroplane.cpp  aeroplane.h  bike.cpp  bike.h  car.h  vehiclefactory.h  vehicles.cpp
Creational Patterns/FactoryMethod/: car.cpp  main.cpp  vehiclefactory.cpp  vehicles.h
Creational Patterns/abstractFactory/: CMakeLists.txt  abstractfactory.cpp  abstractfactory.h  bike.cpp  bike.h  bmw.cpp  bmw.h  car.cpp  car.h  factory.h  main.cpp  suzuki.cpp  suzuki.h  vehicles.h
Creational Patterns/builder/: CMakeLists.txt  builder.cpp  builder.h  laptopbuilder.cpp  laptopbuilder.h  laptops.cpp  laptops.h  main.cpp
Creational Patterns/prototype/: CMakeLists.txt  car.h  main.cpp  sedan.cpp  sedan.h  sportscar.cpp  sportscar.h
Creational Patterns/singleton/: README.md  thread-safe singleton
Creational Patterns/singleton/naive singleton/: CMakeLists.txt  README.md  main.cpp  singleton.h
Creational Patterns/singleton/singleton problem/: CMakeLists.txt  README.md  main.cpp  singleton.cpp  singleton.h
Creational Patterns/singleton/thread_safe singleton/: CMakeLists.txt  README.md  main.cpp  singleton.cpp  singleton.h
singleton/naive singleton/: README.md  singleton.cpp
